# rust-workspace-and-bin-folder-test

./: .gitattributes  Cargo.toml
adder_2/: Cargo.toml
adder_2/src/: main.rs
adder_3/adder_3/: Cargo.toml
adder_3/adder_3_1/: Cargo.toml
adder_3/adder_3_1/src/: main.rs
adder_3/adder_3_2/: Cargo.toml
adder_3/adder_3_2/src/: main.rs
playground/: Cargo.toml
playground/sample/: sample.rs  sample2.rs
playground/src/: hello.rs  main.rs  simple.rs
