[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "simpletest"
path = "src/simple.rs"

[[bin]]
name="maintest"
path = "src/main.rs"

[[bin]]
name = "sample1"
path = "sample/sample.rs"

[[bin]]
name = "sample2"
path = "sample2/bin/sample2.rs"

[dependencies]
